test_regress/t/t_metacmt_onoff.out
%Warning-LITENDIAN: t/t_metacmt_onoff.v:8:8: Little bit endian vector: left < right of bit range: [0:1]
                                           : ... In instance t
    8 |    reg [0:1] show1; /*verilator lint_off LITENDIAN*/  reg [0:2] ign2; /*verilator lint_on LITENDIAN*/   reg [0:3] show3;
      |        ^
                    ... For warning description see https://verilator.org/warn/LITENDIAN?v=latest
                    ... Use "/* verilator lint_off LITENDIAN */" and lint_on around source to disable this message.
%Warning-LITENDIAN: t/t_metacmt_onoff.v:8:109: Little bit endian vector: left < right of bit range: [0:3]
                                             : ... In instance t
    8 |    reg [0:1] show1; /*verilator lint_off LITENDIAN*/  reg [0:2] ign2; /*verilator lint_on LITENDIAN*/   reg [0:3] show3;
      |                                                                                                             ^
%Error: Exiting due to
